# readap

./: .gitignore  CLAUDE.md  CLAUDE_JS_PLAN.md  Cargo.toml  LICENSE.txt  README.md  package-lock.json  package.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
data/: 44097w9999.nc.das.txt  44097w9999.nc.dods  44097w9999.nc.txt
readap/: CLAUDE.md  Cargo.toml  README.md
readap-js/: README.md  package.json  test-example.js  tsconfig.json
readap-js/src/: client.ts  example.ts  index.ts  types.ts
readap-wasm/: API_SUMMARY.md  API_UPDATE_SUMMARY.md  CLAUDE.md  Cargo.toml  README.md  REFINED_API.md  build-all.sh  build-universal.sh  build.sh  example.js  package.json  types.d.ts  web-example.html
readap-wasm/examples/: EXAMPLES.md  README.md  bun-example.js  core-functionality-test.js  das_usage.js  debug-constraints.js  debug-coordinates.js  debug-das.js  debug-dods.js  fetch-example.js  final-verification-test.js  metadata-inspector.js  ncdump.js  serve.js  subset-dataset.js  test-constraints-node.js  test-constraints.js  test-dods-download.js  test-dods-parsing.js  test-immutable-dataset.js  test-simple.js  test-universal-dods.js  test-universal-fetch.js  universal-runtime-test.js  url-example.js  web-viewer.html  working-constraints-example.js  working-example.js
readap-wasm/src/: converters.rs  coordinate_resolver.rs  das_parser.rs  dataset.rs  dds_parser.rs  dds_types.rs  fetch_abstraction.rs  lib.rs  (+5 more)
src/: das.rs  data.rs  data_type.rs  dds.rs  dods.rs  errors.rs  lib.rs
tests/: data_types.rs  new_data_types.rs  parse.rs
(+31 files in other folders)
