[package]
name = "readap"
description = "A parser for the OpenDAP DAP2 protocol"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Iannucci <mpiannucci@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["dap", "opendap", "scientific", "data"]
categories = ["encoding", "parser-implementations", "parsing", "science", "science::geo"]
repository = "https://github.com/mpiannucci/readap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
thiserror = "1.0"
